--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+
 <div id="external-libraries">  
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   
