Update welcome message

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   
   <div id="welcome-text">
     <h1>Welcome to Coder Lyn's Portfolio</h1>
-    <p>Take your time. Browse around.<br>
-      I hope you see something you like.<br>
-      Below is a collection of my work from Free Code Camp.
+    <p>I'm an aspiring developer, learning on my own.<br>
+      Below is a collection of my work.<br>
+      Please feel free to reach out if you'd like my help with something, or you'd like to be a mentor.
     </p>
   </div>
     
