--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="project-tiles">
       
     <div class="project-tile">  
-      <a href="https://codepen.io/ailyntang/full/XQMrjx" target="_blank">
+      <a href="https://ailyntang.github.io/pomodoro/" target="_blank">
         <img class="project-img" src="https://images.unsplash.com/37/tEREUy1vSfuSu8LzTop3_IMG_2538.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="Calculator">
         <div class="overlay">
           <div class="overlay-text">Pomodoro Timer<br>(React)</div>
