--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang='en'>
+
 <head>
   <link rel="stylesheet" type="text/css" href="index.css">
 </head>
@@ -152,3 +155,4 @@
   </section>
 </body>
 
+</html>
