--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
       
     </div>
   </section>
+
+  <div id='app'></div>
   
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
