--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="index.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
