Move css links from `<body>` to `<head>`

--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
 
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Oleo+Script' >
+
+  <!-- Hamburger icon for top navbar -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-  <div id="external-libraries">  
-    <link href='http://fonts.googleapis.com/css?family=Oleo+Script' rel='stylesheet' type='text/css'>
-
-    <!-- Hamburger icon for top navbar -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </div>
-  
   <div id='app'></div>
 
   <!-- Load React. -->
