Replace double quotes with single quotes
Follow Airbnb's styleguide

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang='en'>
 
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel='stylesheet' type='text/css' href='style.css'>
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Oleo+Script' >
 
   <!-- Hamburger icon for top navbar -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 </head>
 
 <body>
@@ -14,11 +14,11 @@
 
   <!-- Load React. -->
   <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-  <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+  <script src='https://unpkg.com/react@16/umd/react.production.min.js' crossorigin></script>
+  <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js' crossorigin></script>
 
   <!-- Load our React component. -->
-  <script src="script.js"></script>
+  <script src='script.js'></script>
 </body>
 
 </html>
